--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
     [class*="pi"]{
 
-       background-image: url(../assets/images/Instagram_logo_2022.svg.png);
+       background-image: url(./assets/images/Instagram_logo_2022.svg.png);
        background-size: cover;
         border: solid;
         height: 50px;
@@ -72,7 +72,7 @@
     </div>
     <div class="flex">
         <div class="upper">
-            <div class="pic" style="background-image: url(../assets/images/snap.jpeg);"></div>
+            <div class="pic" style="background-image: url(./assets/images/snap.jpeg);"></div>
             <div style="margin-left: 10px;">
             <div class="title"><h3 style="display: inline;">Snapchat</h3></div>
             <div class="obli"> <p style="display: inline;">Social Media</div>
@@ -93,7 +93,7 @@
         </div>
     </div><div class="flex">
         <div class="upper">
-            <div class="pic" style="background-image: url(../assets/images/drop.png);"></div>
+            <div class="pic" style="background-image: url(./assets/images/drop.png);"></div>
             <div style="margin-left: 10px;">
             <div class="title"><h3 style="display: inline;">Dropbox</h3></div>
             <div class="obli"> <p style="display: inline;">File Management</div>
