--- a/media/index.html
+++ b/media/index.html
@@ -89,42 +89,42 @@
 </head>
 <body>
     <div class="gallery">
-        <img class="bmw" src="../assets/images/BMW.avif" >
-        <img class="car" src="../assets/images/car.jpg">
+        <img class="bmw" src="./assets/images/BMW.avif" >
+        <img class="car" src="./assets/images/car.jpg">
         <h2> 2x2 image gallery  </h2>
-        <img claas="cricket" src="../assets/images/kohli.jpg" height="100px" width="200px">
-        <img class="wow" src="../assets/images/prabhas.jpg" width="190px" height="100px">
+        <img claas="cricket" src="./assets/images/kohli.jpg" height="100px" width="200px">
+        <img class="wow" src="./assets/images/prabhas.jpg" width="190px" height="100px">
     </div>
     <div class="new">
-        <img class="sr" src="../assets/images/raina.jpg" height="100px" width="33%">
-        <img class="car" src="../assets/images/rohit.jpg" height="100px" width="33%">
-        <img claas="cricket" src="../assets/images/trimph.jpeg" height="100px" width="31%">
-        <img class="wow" src="../assets/images/yamaha.jpeg" width="33%" height="100px">
+        <img class="sr" src="./assets/images/raina.jpg" height="100px" width="33%">
+        <img class="car" src="./assets/images/rohit.jpg" height="100px" width="33%">
+        <img claas="cricket" src="./assets/images/trimph.jpeg" height="100px" width="31%">
+        <img class="wow" src="./assets/images/yamaha.jpeg" width="33%" height="100px">
         <h2> 3x3 image gallery  </h2>
-        <img class="sup" src="../assets/images/viratkohli.webp" width="33%" height="100px">
-        <img class="cro" src="../assets/images/rx100.jpeg" width="32%" height="100px">
-        <img class="vik" src="../assets/images/viswaksen.jpg" width="33%" height="100px">
-        <img class="noo" src="../assets/images/ks bharat.jpg" width="33%" height="100px">
-        <img class="koo" src="../assets/images/pattern.jpg" width="32%" height="100px"> 
+        <img class="sup" src="./assets/images/viratkohli.webp" width="33%" height="100px">
+        <img class="cro" src="./assets/images/rx100.jpeg" width="32%" height="100px">
+        <img class="vik" src="./assets/images/viswaksen.jpg" width="33%" height="100px">
+        <img class="noo" src="./assets/images/ks bharat.jpg" width="33%" height="100px">
+        <img class="koo" src="./assets/images/pattern.jpg" width="32%" height="100px"> 
         </div>
         <div class="gre">
-            <img class="ww" src="../assets/images/1000_F_755529987_bAWhLXBdK3rhciJMh2Xa00dT1iVL7Cro.jpg" width="25%" height="100px">
-            <img class="qr" src="../assets/images/Untitled 1.png" width="25%" height="100px">
-            <img class="ww" src="../assets/images/barcode.gif" width="25%" height="100px">
-            <img class="nn" src="../assets/images/id.jpeg" width="22%" height="100px">
-            <img class="oo" src="../assets/images/BMW.avif" width="25%" height="100px">
-            <img class="ar" src="../assets/images/rohit.jpg" height="100px" width="25%">
-            <img claas="ket" src="../assets/images/trimph.jpeg" height="100px" width="25%">
-            <img class="ow" src="../assets/images/yamaha.jpeg" width="22%" height="100px">
-            <img class="bmw" src="../assets/images/BMW.avif" width="25%" height="100px">
-            <img class="car" src="../assets/images/car.jpg" width="25%" height="100px">
+            <img class="ww" src="./assets/images/1000_F_755529987_bAWhLXBdK3rhciJMh2Xa00dT1iVL7Cro.jpg" width="25%" height="100px">
+            <img class="qr" src="./assets/images/Untitled 1.png" width="25%" height="100px">
+            <img class="ww" src="./assets/images/barcode.gif" width="25%" height="100px">
+            <img class="nn" src="./assets/images/id.jpeg" width="22%" height="100px">
+            <img class="oo" src="./assets/images/BMW.avif" width="25%" height="100px">
+            <img class="ar" src="./assets/images/rohit.jpg" height="100px" width="25%">
+            <img claas="ket" src="./assets/images/trimph.jpeg" height="100px" width="25%">
+            <img class="ow" src="./assets/images/yamaha.jpeg" width="22%" height="100px">
+            <img class="bmw" src="./assets/images/BMW.avif" width="25%" height="100px">
+            <img class="car" src="./assets/images/car.jpg" width="25%" height="100px">
             <h2> 4x4 image gallery  </h2>
-            <img claas="cri" src="../assets/images/kohli.jpg" width="25%" height="100px">
-            <img class="w" src="../assets/images/prabhas.jpg" width="22%" height="100px">
-            <img class="sup" src="../assets/images/viratkohli.webp" width="25%" height="100px">
-            <img class="cro" src="../assets/images/rx100.jpeg" width="25%" height="100px">
-            <img class="vik" src="../assets/images/viswaksen.jpg" width="25%" height="100px">
-            <img class="noo" src="../assets/images/ks bharat.jpg" width="22%" height="100px">
+            <img claas="cri" src="./assets/images/kohli.jpg" width="25%" height="100px">
+            <img class="w" src="./assets/images/prabhas.jpg" width="22%" height="100px">
+            <img class="sup" src="./assets/images/viratkohli.webp" width="25%" height="100px">
+            <img class="cro" src="./assets/images/rx100.jpeg" width="25%" height="100px">
+            <img class="vik" src="./assets/images/viswaksen.jpg" width="25%" height="100px">
+            <img class="noo" src="./assets/images/ks bharat.jpg" width="22%" height="100px">
         </div>
 </body>
 </html>
