--- a/discpro/index.html
+++ b/discpro/index.html
@@ -117,21 +117,21 @@
     <div class="video">
         <h1 class="movie">Kalki</h1>
         <video height="200px" width="250px" controls autoplay>
-            <source src="../assets/vedios/Kalki 2898.mp4">
+            <source src="./assets/vedios/Kalki 2898.mp4">
         </video>
     </div>
     <div class="gallery">
-        <img class="bmw" src="../assets/images/BMW.avif" height="140vh" width="190vw">
+        <img class="bmw" src="./assets/images/BMW.avif" height="140vh" width="190vw">
         <h3 class="bmw1">BMW</h3> 
-        <img class="car" src="../assets/images/car.jpg" height="120vh" width="190vw">
+        <img class="car" src="./assets/images/car.jpg" height="120vh" width="190vw">
         <h3 class="car1">car</h3> 
-        <img class="kohli" src="../assets/images/kohli.jpg" height="125vh" width="165vw">
+        <img class="kohli" src="./assets/images/kohli.jpg" height="125vh" width="165vw">
         <h3 class="k1">Virat</h3>
-        <img class="raina" src="../assets/images/raina.jpg" height="45%" width="35%">
+        <img class="raina" src="./assets/images/raina.jpg" height="45%" width="35%">
         <h3 class="r1">Suresh</h3>
-        <img class="rx100" src="../assets/images/rx100.jpeg" height="45%" width="33%">
+        <img class="rx100" src="./assets/images/rx100.jpeg" height="45%" width="33%">
         <h3 class="rx1001">RX100</h3>
-        <img class="yamaha" src="../assets/images/yamaha.jpeg" height="45%" width="30%">
+        <img class="yamaha" src="./assets/images/yamaha.jpeg" height="45%" width="30%">
         <h3 class="yamaha1">Yamaha</h3>
         <h1 class="img">Image Gallery</h1>
 
